[tests] migrating `LocalFileSystemTest` and `TempDirectory` to NIO
GitOrigin-RevId: 4aa79b2b7421d346a4d7f569a46ab00a358c0fc9